--- a/DabangProject/src/app/restaurant/restaurant.component.html
+++ b/DabangProject/src/app/restaurant/restaurant.component.html
@@ -8,9 +8,9 @@
      <div class="row bg-light" >
        <div class="col-md-6">
          <h3>Location</h3>
-         <p>Thanks for stopping by. We are the last authentic Italian restaurant in Milan, serving delicious Italian cuisine cooked by the best chefs. It only takes a few minutes to browse through our website and check out our menu. We hope you'll soon join us for a superb Italian culinary experience.</p>
+         <p>{{restaurantText.text1}}</p>
          <h5>A Unique Experience</h5>
-         <p>Thanks for stopping by. We are the last authentic Italian restaurant in Milan, serving delicious Italian cuisine cooked by the best chefs. It only takes a few minutes to browse through our website and check out our menu. We hope you'll soon join us for a superb Italian culinary experience.</p>
+         <p>{{restaurantText.text1}}</p>
        </div>
        <div class="col-md-6" data-aos="fade-up">
          <img class="img-fluid" src="assets/img/location.jpg">
@@ -23,9 +23,9 @@
        </div>
        <div class="col-md-6 order-md-12 order-1">
          <h3>Cuisine</h3>
-         <p>Thanks for stopping by. We are the last authentic Italian restaurant in Milan, serving delicious Italian cuisine cooked by the best chefs. It only takes a few minutes to browse through our website and check out our menu. We hope you'll soon join us for a superb Italian culinary experience.</p>
+         <p>{{restaurantText.text1}}</p>
          <h5>A Unique Experience</h5>
-         <p>Thanks for stopping by. We are the last authentic Italian restaurant in Milan, serving delicious Italian cuisine cooked by the best chefs. It only takes a few minutes to browse through our website and check out our menu. We hope you'll soon join us for a superb Italian culinary experience.</p>
+         <p>{{restaurantText.text1}}</p>
        </div>
      </div>
      <!--- End of Restaurant -->
