--- a/DabangProject/src/app/menu/menu.component.html
+++ b/DabangProject/src/app/menu/menu.component.html
@@ -9,13 +9,14 @@
       <div class="card view zoom">
           <img class="card-img-top img-fluid " src="assets/img/meat-menu.jpg">
           <div class="card-body">
-            <h5 class="card-title">~ Meat Menu ~</h5>
+            <h5 class="card-title" style="text-align: center">{{menu.brekkyTitle}}</h5>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Bocconcini di carne in nido di sfoglia</li>
-              <li class="list-group-item">Bruschette con maiale al curry</li>
-             <li class="list-group-item">Uova al prosciutto</li>
-             <li class="list-group-item">Vitello tonnato</li>
-             <li class="list-group-item">Fesa di tacchino marinata con olive</li>
+              <li class="list-group-item">{{menu.brekkyMenu1}}</li>
+              <li class="list-group-item">{{menu.brekkyMenu2}}</li>
+             <li class="list-group-item">{{menu.brekkyMenu3}}</li>
+             <li class="list-group-item">{{menu.brekkyMenu4}}</li>
+             <li class="list-group-item">{{menu.brekkyMenu5}}</li>
+
           </ul>
           </div>
       </div>
@@ -24,13 +25,12 @@
       <div class="card">
           <img class="card-img-top img-fluid " src="assets/img/fish-menu.jpg">
           <div class="card-body">
-            <h5 class="card-title">~ Fish Menu ~</h5>
+            <h5 class="card-title" style="text-align: center">{{menu.bugerTitle}}</h5>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Carpaccio di polpo</li>
-              <li class="list-group-item">Cozze al verde</li>
-             <li class="list-group-item">Cocktail di gamberi</li>
-             <li class="list-group-item">Risotto alla crema di scampi</li>
-             <li class="list-group-item">Ravioli di pesce con crema di scampi</li>
+              <li class="list-group-item">{{menu.bugerMenu1}}</li>
+             <li class="list-group-item">{{menu.bugerMenu2}}</li>
+             <li class="list-group-item">{{menu.bugerMenu3}}</li>
+             <li class="list-group-item">{{menu.bugerMenu4}}</li>
           </ul>
           </div>
       </div>
@@ -39,13 +39,14 @@
       <div class="card">
           <img class="card-img-top img-fluid" src="assets/img/menu-vegetarian.jpg">
           <div class="card-body">
-            <h5 class="card-title">~ Vegetarian Menu ~</h5>
+            <h5 class="card-title" style="text-align: center">{{menu.coffeeTitle}}</h5>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Parmigiana di melanzane</li>
-              <li class="list-group-item">Strudel con ricotta e spinaci</li>
-             <li class="list-group-item">Polpette di spinaci e ricotta</li>
-             <li class="list-group-item">Frittata di patate al forno</li>
-             <li class="list-group-item">Spaghetti con le polpettine vegetariane</li>
+              <li class="list-group-item">{{menu.coffeeMenu1}}</li>
+              <li class="list-group-item">{{menu.coffeeMenu2}}</li>
+             <li class="list-group-item">{{menu.coffeeMenu3}}</li>
+             <li class="list-group-item">{{menu.coffeeMenu4}}</li>
+             <li class="list-group-item">{{menu.coffeeMenu5}}</li>
+
           </ul>
           </div>
       </div>
